--- a/home.html
+++ b/home.html
@@ -28,7 +28,15 @@
    </div>
     </nav>
     </header>
+
+    <section class="intro">
+        <div class="intro-content">
+            <h2>Welcome to My Portfolio</h2>
+            </div>
+            </section>
+
     
+
 
 
 
