Added featured projects section

--- a/home.html
+++ b/home.html
@@ -35,9 +35,39 @@
 
     <section class="intro">
         <div class="intro-content">
-            <h2><i>Welcome to My Portfolio</i></h2>
+            <h2><i>Hi, I'm Trisha -  Welcome to My Portfolio</i></h2>
+            <p>I’m a first‑year Computer Science student exploring web development, creative coding, and practical software projects.</p>
+            <p>This is my personal portfolio website where I showcase my projects and skills.</p>
+            <p>You can get an overview of some of my projects below.</p>
             </div>
-            </section>
+
+            <h3>Featured Projects</h3>
+
+        <div class="row mb-3">
+            <div class="col-3">
+                <div class="card">
+  <img src="https://picsum.photos/id/1/150" class="card-img-top" alt="project 1 image">
+    <div class="card-body">
+    <h5 class="card-title">My Study Planner</h5>
+    <p class="card-text">A simple web-based study planner designed to help students organise tasks, track deadlines, and plan revision sessions.</p>
+    <a href="#" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </sectiion
 
     
 
