Used bootstrap cards to present the projects

--- a/home.html
+++ b/home.html
@@ -43,17 +43,40 @@
 
             <h3>Featured Projects</h3>
 
-        <div class="row mb-3">
-            <div class="col-3">
+        <div class="row">
+            <div class="col-4">
                 <div class="card">
-  <img src="https://picsum.photos/id/1/150" class="card-img-top" alt="project 1 image">
+  <img src="sp.jpg" class="card-img-top" alt="project 1 image">
     <div class="card-body">
     <h5 class="card-title">My Study Planner</h5>
-    <p class="card-text">A simple web-based study planner designed to help students organise tasks, track deadlines, and plan revision sessions.</p>
+    <p class="card-text">A simple web-based study planner designed to help students organise tasks, track deadlines and plan revision sessions effectively.</p>
     <a href="#" class="btn btn-primary">See More</a>
         </div>
     </div>
 </div>
+
+    <div class="col-4">
+        <div class="card">
+  <img src="g.jpg" class="card-img-top" alt="project 2 image">
+    <div class="card-body">
+    <h5 class="card-title">Grid Game</h5>
+    <p class="card-text">A Java-based grid game where players move around, collect points, and avoid traps, featuring scoring and basic game logic.</p>
+    <a href="#" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    </div>
+
+    <div class="col-4">
+        <div class="card">
+  <img src="w.jpg" class="card-img-top" alt="project 3 image">
+    <div class="card-body">
+    <h5 class="card-title">Winter Scene Animation</h5>
+    <p class="card-text">A cosy animated winter scene built using HTML, CSS, and keyframe animations, with smooth transitions and festive visuals.</p>
+    <a href="#" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    </div>
+        </div>
 
 
 
