--- a/home.html
+++ b/home.html
@@ -6,7 +6,16 @@
     <title>Portfolio</title>
     <style>
     @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@1&display=swap');
-</style>
+    </style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
+    </style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+    </style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
