--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+     <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+    </style>
+     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    
 </head>
 <body>
+    <!-- Navigation -->
+    <header>
+        <h1><b>My Portfolio</b></h1>
+        <div class="container">
+    <nav class="navbar navbar-expand-lg bg-light mb-3">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link text-primary" href="home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-primary" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-primary" href="portfolio.html">Portfolio</a></li>
+          </ul>
+        </div>
+   </div>
+    </nav>
+    </header>
     
 </body>
 </html>
