--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
      <style>
     @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
     </style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
+    </style>
      <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
@@ -24,7 +27,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link text-primary" href="home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-primary" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="portfolio.html">Portfolio</a></li>
           </ul>
@@ -32,6 +35,17 @@
    </div>
     </nav>
     </header>
-    
+
+    <main>
+    <section class="about">
+        <div class="about-me">
+            <h2><b><u>About Me</u></b></h2>
+        </div>
+
+
+
+    </section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
