--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
     <style>
     @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@1&display=swap');
@@ -21,7 +21,6 @@
     
 </head>
 <body>
-     <!-- Navigation -->
     <header>
         <h1><b>My Portfolio</b></h1>
         <div class="container">
@@ -33,7 +32,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link text-primary" href="home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-primary" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="portfolio.html">Portfolio</a></li>
           </ul>
@@ -42,6 +41,8 @@
     </nav>
     </header>
 
+
+<main>
     <section class="intro">
         <div class="intro-content">
             <h2><i>Hi, I'm Trisha -  Welcome to My Portfolio</i></h2>
@@ -51,35 +52,35 @@
             </div>
 
             <h3><b><u>Featured Projects</u></b></h3>
-
         <div class="row">
             <div class="col-4">
                 <div class="card">
   <img src="sp.jpg" class="card-img-top" alt="project 1 image">
     <div class="card-body">
-    <h5 class="card-title">My Study Planner</h5>
+    <h4 class="card-title">My Study Planner</h4>
     <p class="card-text">A simple web-based study planner designed to help students organise tasks, track deadlines and plan revision sessions effectively.</p>
     <a href="#" class="btn btn-primary">See More</a>
         </div>
     </div>
 </div>
+ 
 
     <div class="col-4">
         <div class="card">
   <img src="g.jpg" class="card-img-top" alt="project 2 image">
     <div class="card-body">
-    <h5 class="card-title">Grid Game</h5>
+    <h4 class="card-title">Grid Game</h4>
     <p class="card-text">A Java-based grid game where players move around, collect points, and avoid traps, featuring scoring and basic game logic.</p>
     <a href="#" class="btn btn-primary">See More</a>
+            </div>
         </div>
-    </div>
     </div>
 
     <div class="col-4">
         <div class="card">
   <img src="w.jpg" class="card-img-top" alt="project 3 image">
     <div class="card-body">
-    <h5 class="card-title">Winter Scene Animation</h5>
+    <h4 class="card-title">Winter Scene Animation</h4>
     <p class="card-text">A cosy animated winter scene built using HTML, CSS, and keyframe animations, with smooth transitions and festive visuals.</p>
     <a href="#" class="btn btn-primary">See More</a>
             </div>
@@ -87,6 +88,7 @@
     </div>
 </div>
 </section>
+</main>
 
 <footer>
 <div class="row">
@@ -96,22 +98,6 @@
       </div>
     </div>
  </footer>
-
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
