--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link text-primary" href="home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-primary" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="portfolio.html">Portfolio</a></li>
           </ul>
@@ -32,6 +32,6 @@
    </div>
     </nav>
     </header>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
