added about me section

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <section class="about">
         <div class="about-me">
             <h2><b><u>About Me</u></b></h2>
-            <p>I’m Trisha, a first‑year Computer Science student at the University of Dundee. I enjoy building simple, user‑friendly projects that combine creativity with problem‑solving. I’m especially interested in web development, game logic, and making technical work accessible for everyone.</p>
+            <p>I'm Trisha, a first‑year Computer Science student at the University of Dundee. I enjoy building simple, user‑friendly projects that combine creativity with problem‑solving. I’m especially interested in web development, game logic, and making technical work accessible for everyone.</p>
         </div>
 
 
