Added skills section

--- a/about.html
+++ b/about.html
@@ -40,17 +40,60 @@
     <section class="about">
         <div class="about-me">
             <h2><b><u>About Me</u></b></h2>
-            <p>I'm Trisha, a first‑year Computer Science student at the University of Dundee. I enjoy building simple, user‑friendly projects that combine creativity with problem‑solving. I’m especially interested in web development, game logic, and making technical work accessible for everyone.</p>
+            <ul class="list-group">
+    <li class="list-group-item mt-3">
+      <p>I'm Trisha, a first‑year Computer Science student at the University of Dundee. I enjoy building simple, user‑friendly projects that combine creativity with problem‑solving. I’m especially interested in web development, game logic, and making technical work accessible for everyone.</p>
+    </li>
+  </ul> 
         </div>
     </section>
+
 
     <section class="education">
         <div class="edu-content">
             <h2><b><u>Education</u></b></h2>
+            <ul class="list-group">
 
+    <li class="list-group-item">
+      <h3 class="mb-1">BSc Computer Science (Data Science & AI)</h3>
+      <p class="mb-1">University of Dundee — 2025–2029</p>
+      <p class="mb-1">Modules: Data Structures & Algorithms, Web Development, Mathematics for CS</p>
+    </li>
 
+    <li class="list-group-item mt-3">
+      <h3 class="mb-1">Harris Academy, Dundee</h3>
+      <p class="mb-1">2022-2025</p>
+      <p class="mb-1">Advanced Higher: Mathematics, English</p>
+      <p class="mb-1">Higher: Mathematics, Modern Studies, English, Physics, Computing Science</p>
+    </li>
+  </ul>
         </div>
     </section>
+
+
+    <section class="skills">
+        <div class="skills-content">
+            <h2><b><u>Skills</u></b></h2>
+            <ul class="list-group">
+
+    <li class="list-group-item">
+         <h3 class="mb-1">Technical Skills</h3>
+         <ul class="mt-2">
+            <li>Java</li>
+            <li>Python</li>
+            <li>HtML & CSS</li>
+         </ul>
+    </li>
+
+    <li class="list-group-item">
+         <h3 class="mb-1">Soft Skills</h3>
+         <ul class="mt-2">
+            <li>Communication</li>
+            <li>Teamwork</li>
+            <li>Time Management</li>
+         </ul>
+    </li>
+</section>
 
 
 
