Added a contact section

--- a/about.html
+++ b/about.html
@@ -95,7 +95,18 @@
     </li>
 </section>
 
+<section class="contact">
+<div class="contact-content"> 
+    <h2><b><u>Contact</u></b></h2> 
+    <ul class="list-group"> 
+        <li class="list-group-item">
+            <p>You can reach me at: example@gmail.com</p> 
+        </li>
+    </ul>
+</div>
 
+
+</section>
 
 
 
