--- a/about.html
+++ b/about.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
      <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@1&display=swap');
     </style>
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
+    </style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+    </style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
      <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -104,21 +110,16 @@
         </li>
     </ul>
 </div>
-
-
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
+<footer>
+<div class="row">
+    <div class="col-12 text-center py-3 bg-light">
+        <p class="mb-0">&copy; 2026 Trisha's Portfolio - Contact: example@gmail.com</p>
+        </div>
+      </div>
+    </div>
+ </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
