Added project 1 to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,37 @@
     </header>
 
     <main>
+         <h2 class="text-center mb-5"><b><u>My Projects</u></b></h2>
+    <section>
+       <article>
+        <div class="row justify-content-center g-4">
+            <div class="col-6">
+                <div class="card h-100">
+  <img src="sp.jpg" class="card-img-top" alt="project 1 image">
+    <div class="card-body">
+    <h4 class="card-title">My Study Planner</h4>
+    <p class="card-text">A simple web-based study planner designed to help students organise tasks, track deadlines and plan revision sessions effectively.</p>
+        </div>
+    </div>
+</div>
+</article>
+</section>
+
+<section>
+       <article>
+        <div class="row justify-content-center g-4">
+            <div class="col-6">
+                <div class="card h-100">
+  <img src="sp.jpg" class="card-img-top" alt="project 1 image">
+    <div class="card-body">
+    <h4 class="card-title">My Study Planner</h4>
+    <p class="card-text">A simple web-based study planner designed to help students organise tasks, track deadlines and plan revision sessions effectively.</p>
+        </div>
+    </div>
+</div>
+</article>
+</section>
+ 
 
 
 
@@ -58,7 +89,10 @@
 
 
 
-        
+
+
+
+
     </main>
 
 
