--- a/portfolio.html
+++ b/portfolio.html
@@ -52,22 +52,37 @@
   <img src="sp.jpg" class="card-img-top" alt="project 1 image">
     <div class="card-body">
     <h4 class="card-title">My Study Planner</h4>
-    <p class="card-text">A simple web-based study planner designed to help students organise tasks, track deadlines and plan revision sessions effectively.</p>
+    <h5>Overview:</h5>
+    <p class="card-text">The Study Planner App is a simple, beginner‑friendly web tool designed to help students organise their workload more effectively. It allows users to list tasks, set deadlines, and keep track of upcoming assignments in a clean, minimal interface.</p>
+    <h5>What it does:</h5>
         </div>
     </div>
 </div>
 </article>
-</section>
 
-<section>
+
        <article>
         <div class="row justify-content-center g-4">
             <div class="col-6">
                 <div class="card h-100">
-  <img src="sp.jpg" class="card-img-top" alt="project 1 image">
+  <img src="g.jpg" class="card-img-top" alt="project 2 image">
     <div class="card-body">
-    <h4 class="card-title">My Study Planner</h4>
-    <p class="card-text">A simple web-based study planner designed to help students organise tasks, track deadlines and plan revision sessions effectively.</p>
+    <h4 class="card-title">Grid Game</h4>
+    <p class="card-text">A Java-based grid game where players move around, collect points, and avoid traps, featuring scoring and basic game logic.</p>
+        </div>
+    </div>
+</div>
+</article>
+
+
+<article>
+        <div class="row justify-content-center g-4">
+            <div class="col-6">
+                <div class="card h-100">
+  <img src="w.jpg" class="card-img-top" alt="project 3 image">
+    <div class="card-body">
+    <h4 class="card-title">Web Game</h4>
+    <p class="card-text">A Java-based grid game where players move around, collect points, and avoid traps, featuring scoring and basic game logic.</p>
         </div>
     </div>
 </div>
