Added spacing between cards in portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,10 +79,12 @@
     <p class="card-text">Grid Adventure Game is a small Java project where the player moves around a grid, collects points, and avoids traps. It’s a simple logic‑based game that demonstrates movement, scoring, and basic game mechanics.</p>
     <h5>What it does:</h5>
     <ul class="features">
-        <li>Lets students add, edit, and remove tasks</li>
-        <li>Displays deadlines in an easy‑to‑read list</li>
-        <li>Helps with time management and planning</li>
+        <li>Allows the player to move up, down, left, and right</li>
+        <li>Generates traps and point tiles on the grid</li>
+        <li>Ends the game when a trap is hit</li>
     </ul>
+    <h5>Why I built it:</h5>
+    <p class="card-text">This project was part of my coursework and helped me understand Java fundamentals like loops, arrays, user input, and game logic. It also taught me how to break a problem into smaller parts and build it step by step.</p>
         </div>
     </div>
 </div>
@@ -95,46 +97,23 @@
                 <div class="card h-100">
   <img src="w.jpg" class="card-img-top" alt="project 3 image">
     <div class="card-body">
-    <h4 class="card-title">Web Game</h4>
-    <p class="card-text">A Java-based grid game where players move around, collect points, and avoid traps, featuring scoring and basic game logic.</p>
+    <h4 class="card-title">Winter Scene Animation</h4>
+    <h5>Overview:</h5>
+    <p class="card-text">The Winter Scene Animation is a creative web project built using HTML and CSS animations. It features a cosy winter landscape with falling snow, moving elements, and smooth transitions.</p>
+    <h5>What it does:</h5>
+    <ul class="features">
+        <li>Uses CSS keyframes to animate snowflakes</li>
+        <li>Includes layered scenery for depth</li>
+        <li>Creates a calm, festive atmosphere</li>
+    </ul>
+    <h5>Why I built it:</h5>
+    <p class="card-text">I enjoy making visually appealing web pages, and this project let me experiment with animation timing, positioning, and layering. It helped me understand how small visual details can make a webpage feel alive.</p>
         </div>
     </div>
 </div>
 </article>
 </section>
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
 
     <footer>
 <div class="row">
