Made the heading fonts consistent

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                 <div class="card h-100">
   <img src="sp.jpg" class="card-img-top" alt="project 1 image">
     <div class="card-body">
-    <h3 class="card-title">My Study Planner</h3>
+    <h3 class="card-t">My Study Planner</h3>
     <h4>Overview:</h4>
     <p class="card-text">The Study Planner App is a simple, beginner‑friendly web tool designed to help students organise their workload more effectively. It allows users to list tasks, set deadlines, and keep track of upcoming assignments in a clean, minimal interface.</p>
     <h4>What it does:</h4>
@@ -76,7 +76,7 @@
                 <div class="card h-100">
   <img src="g.jpg" class="card-img-top" alt="project 2 image">
     <div class="card-body">
-    <h3 class="card-title">Grid Game</h3>
+    <h3 class="card-t">Grid Game</h3>
     <h4>Overview:</h4>
     <p class="card-text">Grid Adventure Game is a small Java project where the player moves around a grid, collects points, and avoids traps. It’s a simple logic‑based game that demonstrates movement, scoring, and basic game mechanics.</p>
     <h4>What it does:</h4>
@@ -100,7 +100,7 @@
                 <div class="card h-100">
   <img src="w.jpg" class="card-img-top" alt="project 3 image">
     <div class="card-body">
-    <h3 class="card-title">Winter Scene Animation</h3>
+    <h3 class="card-t">Winter Scene Animation</h3>
     <h4>Overview:</h4>
     <p class="card-text">The Winter Scene Animation is a creative web project built using HTML and CSS animations. It features a cosy winter landscape with falling snow, moving elements, and smooth transitions.</p>
     <h4>What it does:</h4>
