Added placeholder profile pic image to about.html

--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
     <main>
     <section class="about">
         <div class="about-me">
+            <img src="https://placehold.net/avatar.png" alt="Profile Picture" class="profile-pic mx-2">
             <h2><b><u>About Me</u></b></h2>
             <ul class="list-group list-block">
     <li class="list-group-item">
