--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
     <header>
         <h1><b>My Portfolio</b></h1>
         <div class="container">
-    <nav class="navbar navbar-expand-lg bg-light mb-3">
+    <nav class="navbar navbar-expand-lg bg-dark mb-3">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -121,7 +121,7 @@
 
     <footer>
 <div class="row">
-    <div class="col-12 text-center py-3 bg-light">
+    <div class="col-12 text-center py-3 bg-dark text-white">
         <p class="mb-0">&copy; 2026 Trisha's Portfolio - Contact: example@gmail.com</p>
         </div>
       </div>
